--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is the admin page {{name}}</p>
+    <p>This is the Home page {{name}}</p>
 </body>
 </html>
